fix: layout issue

--- a/src/styles/pages/server.module.css
+++ b/src/styles/pages/server.module.css
@@ -537,14 +537,19 @@
   min-width: 200px;
 }
 
-.message-area {
+.bottom-area {
   flex: 5;
   display: flex;
   flex-direction: column;
   min-height: 200px;
   min-width: 260px;
+  overflow-y: hidden;
+}
+
+.message-area {
+  display: flex;
+  overflow-y: scroll;
   padding: 0.75rem;
-  overflow-y: auto;
 }
 
 .broadcast-area {
@@ -585,6 +590,7 @@
   position: relative;
   display: flex;
   min-height: 60px;
+  margin: 0.75rem;
 }
 
 .button-area {
